--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
-	<title> I really want one!</title>
+	<title> IRFWO</title>
 </head>
 <body>
 	<h1> I really want one!</h1>
