--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
-	<title> IRFWO</title>
+	<title> Antiquagram</title>
 </head>
 <body>
-	<h1> I really want one!</h1>
-	<p> This is the gadget blog of Nicholas Green</p>
+	<h1> The perfect gift!</h1>
+	<p> This is the home of the antiquagram. Nicholas Green</p>
 
 </body>
 </html>
