--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -8,41 +8,43 @@
 <body>
 <header>
 	<section id="logo" class="container">
-			<img src="images/logo.png" alt="Lionhead Capital Partners" title="Company logo">
+			<img src="images/logo.png" alt="Lionhead Capital Partners" title="Company logo">	
+	</section>
+	<section id="navbar" class="container">
+		<a href="#expertise-hero"><h2>About</h2></a>
+	    <a href="#contact-hero"><h2>Contact</h2></a>
 	</section>
 </header>	
-<section id="lion-hero" class="hero">
-	<h1 id="main-heading">Mid Cap <span>Privaty Equity</span>
-	<br>Investments Across <span>Africa</span></h1>
+	<section id="lion-hero" class="hero">
+		<h1 id="main-heading">Mid Cap <span>Privaty Equity</span>
+		<br>Investments Across <span>Africa</span></h1>
+		<h2 id="text-orange">At <strong>Lionhead Capital Partners</strong>, our primary objective is to build a market-leading independent private equity firm focussed on making long-term investments in middle-market companies in sub-Saharan Africa.</h2>
 	</section>
 	<section class="about">
-		<h3>Our vision is to build a market-leading independent African private equity firm.<br> 
-		We are focussed on making long-term investments into middle-market companies in sub-Saharan Africa</h3>
+		<h3><strong>We believe</strong> the dynamics of a strong African growth story provide compelling investment dynamics with: <strong>consistent deal flow</strong> and relatively attractive entry pricing, great opportunities for value enhancement and return profiles with  <strong>higher exit multiples</strong>.</h3>
+		<img src="images/africa.jpg" alt="Picture of Africa" title="African map">
 	</section>
-	<section class="herotwo">
+	<section id="expertise-hero" class="hero">
+	<h2> Lionhead Expertise</h2>
+	<ul>
+		<li>Experience across Sub-Saharan Africa</li>
+		<li>True Operational Expertise</li>
+		<li>A Deep Understanding of Value Creation Drivers</li>
+		<li>Dedicated Middle-Market Focus</li>
+	</ul>
+	<h3>Target Fund Size<br><span>$100m</span></h3>
+	<h3>Investment Time<br><span>10yrs</span></h3>
+	<h3>Investment Size<br><span>$10m</span></h3>
+	<h3>Target Returns<br><span>20%</span></h3>
 	</section>
-	<section class="strategy">
-		<h2>The Objective</h2>
-		<h3>Our primary objective is to <i>grow and build great businesses</i> in Africa. 
-		We seek to <i>generate attractive</i> risk-adjusted returns by targeting investments which provide:</h3>
-		<ul>
-			<li>demonstrable downside protection</li>
-			<li>opportunities for significant value creation post-investment through strategic and operational improvement</li>
-		</ul>
-		<hr>
-		<h2>Market Opportunity</h2>
-		<h3>We believe the dynamics of the middle market underpinned by a strong African growth story provide compelling investment dynamics with:</h3>
-		<ul>
-			<li>consistent deal flow and relatively attractive entry pricing</li>
-			<li>greater opportunities for value enhancement</li>
-			<li>superior return profiles with more exit opportunities and higher exit multiples</li>
-		</ul>
+	<section class="abouttwo">
+		<img src="images/tree.png" alt="Lionhead Capital Partners" title="Company logo">
+		<h3><strong>Our founding partners'</strong> strong combination of experience and skillsets in private equity, investment banking, management consulting and operations is unique in the Southern African mid-market; making us <strong>ideal partners</strong> for companies seeking to grow to the next level</h3>
 	</section>
-	<section class="contact">
-	<h3> Contact</h3>
-	<p>Phone: +44 (0) 20 3230 370</p>
-	<p>Email:<a href="mailto:info@lionheadcapital.com?Subject=Hello%20Lionhead">info@lionheadcapital.com</a></p>
+	<section id="contact-hero">
+		<h3><a href="mailto:info@lionheadcapital.com?Subject=Hello%20Lionhead"><u>Contact Us</u></a></h3>
 	</section>
-
+<footer>
+</footer>
 </body>
 </html>
