Small css changes

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -39,7 +39,7 @@
 	</section>
 	<section class="abouttwo">
 		<img src="images/tree.png" alt="Lionhead Capital Partners" title="Company logo">
-		<h3><strong>Our founding partners'</strong> strong combination of experience and skillsets in private equity, investment banking, management consulting and operations is unique in the Southern African mid-market; making us <strong>ideal partners</strong> for companies seeking to grow to the next level</h3>
+		<h3><strong>Our founding partners'</strong> strong combination of experience and skillsets in private equity, investment banking, management consulting and operations is unique in the Southern African mid-market; making us <strong>ideal partners</strong> for companies seeking to grow to the next level.</h3>
 	</section>
 	<section id="contact-hero">
 		<h3><a href="mailto:info@lionheadcapital.com?Subject=Hello%20Lionhead"><u>Contact Us</u></a></h3>
