--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -4,17 +4,14 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<title>Lionhead Capital Partners</title>
 </head>
-
 <body>
-<header>
-	<section id="logo" class="container">
-			<img src="images/logo.png" alt="Lionhead Capital Partners" title="Company logo">	
-	</section>
-	<section id="navbar" class="container">
-		<a href="#expertise-hero"><h2>About</h2></a>
-	    <a href="#contact-hero"><h2>Contact</h2></a>
-	</section>
-</header>	
+	<header>
+		<img src="images/logo.png" alt="Lionhead Capital Partners" title="Company logo" id="logo" class="container">	
+		<nav id="navbar" class="container">
+			<a href="#expertise-hero"><h2>About</h2></a>
+			<a href="#contact-hero"><h2>Contact</h2></a>
+		</nav>
+	</header>	
 	<section id="lion-hero" class="hero">
 		<h1 id="main-heading">Mid Cap <span>Privaty Equity</span>
 		<br>Investments Across <span>Africa</span></h1>
@@ -25,26 +22,26 @@
 		<img src="images/africa.jpg" alt="Picture of Africa" title="African map">
 	</section>
 	<section id="expertise-hero" class="hero">
-	<h2> Lionhead Expertise</h2>
-	<ul>
-		<li>Experience across Sub-Saharan Africa</li>
-		<li>True Operational Expertise</li>
-		<li>A Deep Understanding of Value Creation Drivers</li>
-		<li>Dedicated Middle-Market Focus</li>
-	</ul>
-	<h3>Target Fund Size<br><span>$100m</span></h3>
-	<h3>Investment Time<br><span>10yrs</span></h3>
-	<h3>Investment Size<br><span>$10m</span></h3>
-	<h3>Target Returns<br><span>20%</span></h3>
+		<h2> Lionhead Expertise</h2>
+		<ul>
+			<li>Experience across Sub-Saharan Africa</li>
+			<li>True Operational Expertise</li>
+			<li>A Deep Understanding of Value Creation Drivers</li>
+			<li>Dedicated Middle-Market Focus</li>
+		</ul>
+		<h3>Target Fund Size<br><span>$100m</span></h3>
+		<h3>Investment Time<br><span>10yrs</span></h3>
+		<h3>Investment Size<br><span>$10m</span></h3>
+		<h3>Target Returns<br><span>20%</span></h3>
 	</section>
 	<section class="abouttwo">
 		<img src="images/tree.png" alt="Lionhead Capital Partners" title="Company logo">
 		<h3><strong>Our founding partners'</strong> strong combination of experience and skillsets in private equity, investment banking, management consulting and operations is unique in the Southern African mid-market; making us <strong>ideal partners</strong> for companies seeking to grow to the next level.</h3>
 	</section>
 	<section id="contact-hero">
-		<h3><a href="mailto:info@lionheadcapital.com?Subject=Hello%20Lionhead"><u>Contact Us</u></a></h3>
+		<h3><a href="mailto:info@lionheadcapital.com?Subject=Hello%20Lionhead">Contact Us</a></h3>
 	</section>
-<footer>
-</footer>
+	<footer>
+	</footer>
 </body>
 </html>
