--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -4,6 +4,7 @@
 	<link type="text/css" rel="stylesheet" href="css/reset.css"/>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<title>Lionhead Capital Partners</title>
+	<meta name="viewport" content="width:device-width, initialscale=1">
 </head>	
 <body>
 	<header>
