--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<title>Lionhead Capital Partners</title>
+	<meta name="viewport" content="width:device-width, initialscale=1">
 </head>	
 <body>
 	<header>
