--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -13,7 +13,7 @@
 			<a href="#contact-hero" id="contact-link"><h2>Contact</h2></a>
 		</nav>
 		<section id="lion-hero" class="hero">
-			<h1 id="main-heading">Mid Cap <span>Privaty Equity</span>
+			<h1 id="main-heading">Mid Cap <span>Private Equity</span>
 			<br>Investments Across <span>Africa</span></h1>
 			<h2 id="text-orange">At <strong>Lionhead Capital Partners</strong>, our primary objective is to build a market-leading independent private equity firm focussed on making long-term investments in middle-market companies in sub-Saharan Africa.</h2>
 			<h1 id="arrow">v</h2>
